# BMA-RAG

./: .gitignore  EVALUATION_SERVING_INTEGRATION.md  Mods Summary.md  SIMPLIFIED_CONFIGURATION_SUMMARY.md  databricks.yml  pyproject.toml
examples/: dspy_miprov2_optimization_example.py  dspy_responses_agent_example.py
rag_utils/: __init__.py
rag_utils/chunking/: __init__.py  options.py  strategies.py
rag_utils/configs/: __init__.py
rag_utils/configs/databricks_config/: __init__.py  utils.py
rag_utils/embedding/: __init__.py  embedding_config.py  index_builder.py
rag_utils/parsing/: config.py
rag_utils/pipelines/: data_pipeline_config.py
resources/: champion_challenger_workflow.yml  indexing_job.yml  ml_artifacts.yml  model_workflow.yml  unstructured_document_pipeline.yml
src/author_model/: author_model.py  dspy_program.py  mlflow_wrapper.py
src/evaluation/: champion_challenger_evaluation.py  helper.py
src/indexing/: build_vector_index.py
src/pipeline/: unstructured_datapipeline_stream.py
