[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-utils"
version = "0.1.0"
description = "Utilities for RAG (Retrieval-Augmented Generation) pipelines with Databricks"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "BMA Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "databricks-sdk>=0.1.0",
    "pydantic>=1.10.0",
]

[project.optional-dependencies]
spark = [
    "pyspark>=3.0.0",
]
tokenizers = [
    "transformers>=4.20.0",
    "tiktoken>=0.5.0",
]
yaml = [
    "pyyaml>=6.0",
]
all = [
    "rag-utils[spark,tokenizers,yaml]",
]

[tool.setuptools]
packages = {find = {where = ["."], include = ["rag_utils*"]}}

[tool.setuptools.package-data]
rag_utils = ["py.typed"]

